--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,7 @@ body{
     border-width: medium;
     border-radius: 0;
     padding: .6rem 1.3rem;
+    margin: .2rem;
     font-size: 1.1rem;
 }
 
